# adscrawler

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  LICENSE  README.md  app_ads_crawler.py  appspec.yml  check.py  dbconn.py  example_config.toml  init_db.py  insert_new.py  main.py  map_new_companies.py  new_company.yml  new_company.yml.example  package-lock.json  package.json  pullAppIds.js  pyproject.toml  requirements.txt  searchApps.js  setup.cfg  storage.py  test.sql  test_insert.py
.github/workflows/: actions-ec2.yml
adscrawler/: __init__.py  config.py  connection.py  queries.py  scrape.py
adscrawler/apks/: apkmirror.py  download_apk.py  install_apk_run_mitm.sh  manifest.py  mitm_process_log.py  mitm_start.sh  process_apk.py  storage.py  waydroid.py  weston.py
adscrawler/app_stores/: __init__.py  apkcombo.py  appbrain.py  apple.py  extract_keywords.py  google.py  process_from_s3.py  process_from_s3_metrics.py  process_icons.py  process_keywords.py  scrape_stores.py  utils.py
adscrawler/config/: __init__.py
adscrawler/dbcon/: atomic_swap.py  connection.py  queries.py
adscrawler/dbcon/sql/: insert_new_keywords.sql  query_apps_missing_icon_variants.sql  query_apps_mitm_in_s3.sql  query_apps_to_api_scan.sql  query_apps_to_api_scan_ads.sql  query_apps_to_creative_scan.sql  query_apps_to_download.sql  query_apps_to_process_keywords.sql  query_apps_to_process_metrics.sql  query_apps_to_process_metrics_with_ids.sql  query_apps_to_sdk_scan.sql  query_apps_to_update.sql  query_apps_to_update_any_new.sql  query_apps_to_update_primary.sql  query_apps_to_update_secondary.sql  query_devs_to_update.sql  query_keywords_to_crawl.sql  query_pub_domains_to_crawl_ads_txt.sql  query_report_combined_companies.sql  query_report_combined_domains.sql  query_report_z_scores.sql  query_simplified_store_app_z_scores.sql
adscrawler/dramatiq/: README.md  __init__.py  crawl-store-apps-apple@.service  crawl-store-apps-google@.service  dispatcher.py  dramatiq-worker-apple@.service  dramatiq-worker-google@.service  dramatiq-worker@.service
adscrawler/dramatiq/app_stores/: __init__.py  actor_defs.py  worker.py
adscrawler/mitm_ad_parser/: creative_processor.py  decrypt_applovin.py  manual_actions.py  mitm_logs.py  mitm_scrape_ads.py  models.py  network_parsers.py  try_failed_mitms.py  utils.py
adscrawler/process/: __init__.py  app_details.py  app_domain_history.py  app_metrics_history.py  app_rankings.py  storage.py
adscrawler/static/: searchApps.js
adscrawler/tools/: cleanup_apks.py  download_apk.py  download_ipa.py  example_contab.txt  extract_keywords.py  from_csv.py  geo.py  get_company_logos.py  get_manifest.py  get_plist.py  mitm_process_log.py  mitm_start.sh  recreate_all_mvs.py  reports.py
config/: __init__.py
dbcon/: connection.py  queries.py
pg-ddl/: README.md  appgoblin_pg_export.sh  country.sql  create_functions.sql  create_tables.sql  create_tables_01.sql  create_tables_02.sql  create_tables_03.sql  create_views.sql  create_views_01.sql  create_views_02.sql  create_views_03.sql  create_views_04.sql  create_views_05.sql  create_views_06.sql  db.sql  insert_collection_and_category.sql  insert_default_values.sql  insert_example_apps.sql  insert_iso_country.sql  insert_trackers.sql  recreate_all_mvs.py
pg-ddl/adtech/: create_tables_01  create_views_01.sql  insert_trackers.sql
pg-ddl/frontend/: create_views_01.sql
pg-ddl/schema/: .sqlfluffignore  appgoblin_pg_export.sh  example_contab.txt  full_db_dump.sql
pg-ddl/schema/adtech/: ad_formats.sql  api_call_found_urls.sql  api_call_urls.sql  categories.sql  click_url_redirect_chains.sql  combined_app_companies__matview.sql  combined_app_parent_companies__matview.sql  combined_companies_history__matview.sql  combined_company_app_history.sql  combined_domain_app_history.sql  combined_store_apps_companies_2025_h1__matview.sql  combined_store_apps_companies_2025_h2__matview.sql  combined_store_apps_companies__matview.sql  combined_store_apps_parent_companies__matview.sql  companies.sql  company_categories__matview.sql  company_categories_manual.sql  company_country_evidence.sql  company_developers.sql  company_domain_mapping.sql  company_mediation_adapters.sql  company_mediation_patterns.sql  company_sdk_strings__matview.sql  company_share_change_2025__matview.sql  company_shares_2025_common__matview.sql  company_value_string_mapping__matview.sql  domain_app_changes_quarterly.sql  domain_app_changes_quarterly_20260719.sql  domain_app_changes_quarterly__matview.sql  functions.sql  sdk_categories.sql  sdk_mediation_patterns.sql  sdk_packages.sql  sdk_paths.sql  sdk_strings__matview.sql  sdks.sql  store_app_sdk_strings_2025_h1__matview.sql  store_app_sdk_strings_2025_h2__matview.sql  store_app_sdk_strings__matview.sql  store_apps_companies_sdk__matview.sql  (+12 more)
pg-ddl/schema/frontend/: adstxt_ad_domain_overview__matview.sql  adstxt_ad_domain_parent_overview__matview.sql  adstxt_domain_entries__matview.sql  adstxt_entries_store_apps__matview.sql  adstxt_publishers_overview__matview.sql  adstxt_publishers_parent_overview__matview.sql  advertiser_creative_rankings__matview.sql  advertiser_creative_rankings_recent_month__matview.sql  advertiser_creatives__matview.sql  api_call_countries__matview.sql  app_keyword_rank_stats__matview.sql  app_keyword_ranks_daily.sql  apps_new_monthly__matview.sql  apps_new_weekly__matview.sql  apps_new_yearly__matview.sql  category_tag_stats__matview.sql  category_tag_type_stats__matview.sql  companies_apps_overview__matview.sql  companies_category_stats__matview.sql  companies_category_tag_stats__matview.sql  companies_category_tag_type_stats__matview.sql  companies_creative_rankings__matview.sql  companies_creative_rankings_new__matview.sql  companies_open_source_percent__matview.sql  companies_overview__matview.sql  companies_overview_reroll__matview.sql  companies_parent_category_stats__matview.sql  companies_parent_category_tag_stats__matview.sql  companies_sdks_overview__matview.sql  functions.sql  (+19 more)
tests/app_stores/: test_apkcombo.py  test_google.py  test_scrape_stores.py
tools/: from_csv.py
(+100 files in other folders)
