[project]
authors = [{ name = "James O'Claire" }]
name = "adscrawler"
description = "project description adscrawler"
requires-python = ">= 3.11"
dynamic = ["version"]


dependencies = [
    'requests',
    'pandas',
    'numpy',
    'sqlalchemy',
    'google-play-scraper @ git+https://github.com/ddxv/google-play-scraper',
    'tldextract',
    'itunes-app-scraper-dmi @ git+https://github.com/ddxv/itunes-app-scraper.git',
    'sshtunnel',
    'selenium',
    'pyyaml',
    "psycopg[binary]",
]


[project.optional-dependencies]
dev = ["pre-commit", "pytest"]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
adscrawler = ["*.js"]

[tool.ruff]
target-version = "py311"
lint.select = [
    "A",   # flake8 builtins 
    "E",   # errors 
    "W",   # pycodestyle Warnings 
    "F",   # PyFlake 
    "B",   # flake8-bugbear rules 
    "I",   # import sort 
    "N",   # PEP8 naming rules 
    "UP",  # pyupgrade, warnings for common mistakes for new versions
    "PLW", # pyflake
    "PLC", # pyflake
    "PLE", # pyflake
    "PD",  # pandas-vet
]
lint.ignore = [
    "E501",    # line length
    "W291",    # trailing space at end of line
    "E501",    # line length 
    "PD901",   # Pandas dataframes called 'df' 
    "ERA001",  # no commented out code 
    "D103",    # Docstrings for all functions
    "D102",    # Docstrings for all methods
    "D101",    # Docstrings for all classes
    "G004",    # no f-string inside logging.info
    "D211",    # one-blank-line-before-class, conflict with D203 
    "D213",    # multi-line-summary-second-line, conflict with D212
    "PLW2901", # for loop variable overwritten by assignment, falling for pandas rename
    "RET504",  # Unnecessary assignment to variable for returning, I prefer it for readability
    "PD015",   # Use df.merge instead of pd.merge, I prefer the latter for readability
]
lint.unfixable = ["B"]
lint.fixable = ["ALL"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.sqlfluff.core]
templater = 'placeholder'
verbose = 2
dialect = 'postgres'
large_file_skip_byte_limit = 0
exclude_rules = [
    'AM04', # using *, agreed this should be TODO, 
]

[tool.sqlfluff.templater.placeholder]
param_style = 'colon'
